# dwarfBoard

./: .gitattributes  .gitignore  README.md
etl/: README.md  pyproject.toml
etl/data/raw/fellowship/: latest.json  leaderboard_20260403T221553Z_7fdffd792ba3.json  leaderboard_20260403T222250Z_02960847cfa8.json  leaderboard_20260403T222250Z_02960847cfa8.meta.json  leaderboard_20260403T224416Z_282f72194ab3.json  leaderboard_20260403T224416Z_282f72194ab3.meta.json  leaderboard_20260403T230051Z_51d4ce338d14.json  leaderboard_20260403T230051Z_51d4ce338d14.meta.json  leaderboard_20260403T232006Z_5307037c7541.json  leaderboard_20260403T232006Z_5307037c7541.meta.json  leaderboard_20260403T233737Z_d16c331c0236.json  leaderboard_20260403T233737Z_d16c331c0236.meta.json  leaderboard_20260403T235253Z_979dc0bcf16d.json  leaderboard_20260403T235253Z_979dc0bcf16d.meta.json  leaderboard_20260404T002248Z_40f87a367580.json  leaderboard_20260404T002248Z_40f87a367580.meta.json  leaderboard_20260404T005519Z_b6f512a18af0.json  leaderboard_20260404T005519Z_b6f512a18af0.meta.json  leaderboard_20260404T013447Z_f2d06f4f063d.json  leaderboard_20260404T013447Z_f2d06f4f063d.meta.json  leaderboard_20260404T023015Z_20532941ab05.json  leaderboard_20260404T023015Z_20532941ab05.meta.json  leaderboard_20260404T033126Z_ba0e352cf981.json  (+6542 more)
etl/examples/: daily_metrics.csv  events.csv
etl/scripts/: generate_pages_payload.py  seed_from_artifact.sh
etl/src/dwarfboard_etl/: __init__.py  cli.py  fetch.py  leaderboard.py  pipeline.py
etl/tests/: test_fetch.py  test_leaderboard.py  test_pipeline.py
(+16821 files in other folders)
