[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwarfboard-etl"
version = "0.1.0"
description = "Foundational ETL pipeline for dwarfBoard analytics"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.scripts]
dwarfboard-etl = "dwarfboard_etl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
